Backup commit